Bug 429298 - No window decoration is highlighted in Window Decorations KCM
Summary: No window decoration is highlighted in Window Decorations KCM
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwindecoration (other bugs)
Version First Reported In: 5.21.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-11-18 11:47 UTC by Patrick Silva
Modified: 2021-06-05 19:02 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-11-18 11:47:44 UTC
STEPS TO REPRODUCE
1. use any of the default global themes (Breeze, Breeze Dark, Breeze Twilight)
2. open System Settings > Appearance > Window Decorations
3. 

OBSERVED RESULT
no window decoration is highlighted

EXPECTED RESULT
current window decoration should be highlighted

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.1
Comment 1 Nate Graham 2020-11-18 20:58:23 UTC
Can reproduce.
Comment 2 David Redondo 2020-11-19 08:19:50 UTC
I looked at it and the defaults that the kcm writes are 

[org.kde.kdecoration2]
library=org.kde.breeze
theme=kwin4_decoration_qml_plastik


while it should be 

[org.kde.kdecoration2]
library=org.kde.breeze

So the kcm thinks it has been changed but can't find the current theme. But it works since breeze doesn't support different themes.
Comment 3 Bug Janitor Service 2020-11-19 08:44:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/469
Comment 4 David Redondo 2020-11-20 15:42:55 UTC
Git commit d64ba69cf191c43b89aeadfb1187422ada04053e by David Redondo.
Committed on 20/11/2020 at 15:42.
Pushed by davidre into branch 'master'.

Readd searching for breeze decoration

Was missed in move from plasma-desktop.
We no longer write configs like
 library=org.kde.breeze
 theme=kwin4_decoration_qml_plastik

M  +5    -0    CMakeLists.txt
M  +11   -0    kcms/lookandfeel/CMakeLists.txt
M  +4    -0    kcms/lookandfeel/config-kcm.h.cmake

https://invent.kde.org/plasma/plasma-workspace/commit/d64ba69cf191c43b89aeadfb1187422ada04053e
Comment 5 David Redondo 2020-11-20 15:44:52 UTC
Git commit 3c7c3ced762a5909c25fba5c9a18ed5e815e9dfb by David Redondo.
Committed on 20/11/2020 at 15:44.
Pushed by davidre into branch 'Plasma/5.20'.

Readd searching for breeze decoration

Was missed in move from plasma-desktop.
We no longer write configs like
 library=org.kde.breeze
 theme=kwin4_decoration_qml_plastik


(cherry picked from commit d64ba69cf191c43b89aeadfb1187422ada04053e)

M  +5    -0    CMakeLists.txt
M  +11   -0    kcms/lookandfeel/CMakeLists.txt
M  +4    -0    kcms/lookandfeel/config-kcm.h.cmake

https://invent.kde.org/plasma/plasma-workspace/commit/3c7c3ced762a5909c25fba5c9a18ed5e815e9dfb
Comment 6 Patrick Silva 2020-11-24 09:22:15 UTC
it's still reproducible.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.1
Comment 7 David Redondo 2020-11-24 09:26:15 UTC
Does Neon build plasma-workspace with breeze kdecoration available?
Comment 8 Bug Janitor Service 2020-11-30 09:27:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/492
Comment 9 Patrick Silva 2021-06-05 19:02:28 UTC
Cannot reproduce.

Operating System: Arch Linux
KDE Plasma Version: 5.21.90
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Graphics Platform: X11