Let KWin handle the decoration defaults

Empty means default, we do not need any logic to get the correct default here,
KWin knows the best what to do. See also the other config keys
BUG:429298
FIXED-IN:5.20.4